# sorting_transformers

./: .gitignore  AGENTS.md  README.md  config.py  data.py  eval.py  model.py  pyproject.toml  sample_sort.py  train.py
configs/: base.yaml
configs/models/: tiny.yaml  wide_shallow.yaml
configs/regimes/: dups.yaml  len_extrap.yaml  unique.yaml  value_shift.yaml
scripts/: eval_checkpoint.py  train.py  train_sweep.py
scripts/probes/: probe_activation_patching.py  probe_attention_comparison.py  probe_counterfactual_swap.py  probe_length_invariance.py  probe_rank_encoding.py
src/sorting_transformers/: __init__.py
src/sorting_transformers/data/: __init__.py  collate.py  sorting_dataset.py
src/sorting_transformers/models/: __init__.py  neural_sorter_baseline.py  positional.py  transformer_base.py  variants.py
src/sorting_transformers/train/: __init__.py  evaluate.py  metrics.py  trainer.py
src/sorting_transformers/utils/: __init__.py  checkpoint.py  config.py  io.py  plotting.py  probes.py  seed.py
tests/: test_dataset.py  test_model.py  test_train_step.py
